# HooshYar

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 20260223_0001_init_core_tables.py
app/: __init__.py
app/api/: exception_handlers.py  main.py
app/api/middlewares/: request_context.py
app/api/v1/: __init__.py
app/api/v1/dependencies/: __init__.py  auth.py  pagination.py  services.py
app/api/v1/routers/: __init__.py  auth.py  health.py  predictions.py  users.py
app/core/: cache.py  celery_app.py  config.py  database.py  logging.py  metrics.py  rate_limit.py  security.py
app/domain/: __init__.py  entities.py
app/domain/schemas/: __init__.py  auth.py  common.py  prediction.py  user.py
app/ml/: __init__.py
app/ml/features/: transform.py
app/ml/monitoring/: drift_logger.py
app/ml/serving/: predictor.py  registry.py
app/ml/training/: train.py
app/repositories/: __init__.py  audit_repository.py  prediction_repository.py  role_repository.py  user_repository.py
app/services/: __init__.py  audit_service.py  auth_service.py  prediction_service.py  user_service.py
app/workers/tasks/: cleanup.py  train_model.py
deploy/compose/: docker-compose.prod.yml  docker-compose.yml
deploy/docker/: Dockerfile  gunicorn_conf.py
deploy/nginx/: bazaarmind.conf
tests/: conftest.py
tests/integration/: test_auth_refresh.py  test_prediction_api.py
tests/unit/: test_security.py
