[tool.poetry]
name = "bazaarmind-backend"
version = "0.1.0"
description = "Production-ready AI SaaS backend for demand forecasting"
authors = ["BazaarMind Team <engineering@bazaarmind.ir>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = { extras = ["standard"], version = "^0.34.0" }
gunicorn = "^23.0.0"
pydantic = "^2.10.5"
pydantic-settings = "^2.8.1"
sqlalchemy = "^2.0.38"
asyncpg = "^0.30.0"
alembic = "^1.14.1"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
redis = "^5.2.1"
slowapi = "^0.1.9"
structlog = "^25.1.0"
prometheus-fastapi-instrumentator = "^7.0.2"
celery = "^5.4.0"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
lightgbm = "^4.6.0"
joblib = "^1.4.2"
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.2"
pytest-cov = "^6.0.0"
httpx = "^0.28.1"
ruff = "^0.9.2"
mypy = "^1.14.1"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
